force-app/main/default/objects/Reader__c/fields/Debtor__c.field-meta.xml
<CustomField>
    <fullName>Debtor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a reader is debtor</description>
    <label>Debtor</label>
    <type>Checkbox</type>
</CustomField>