force-app/main/default/objects/Reader__c/fields/Number_Of_Hold_Books__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Hold_Books__c</fullName>
    <description>Number of books, Reader has currently taken home</description>
    <label>Number Of Hold Books</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>