force-app/main/default/objects/Reader__c/validationRules/BookLimitForStandardSub.validationRule-meta.xml
<ValidationRule>
    <fullName>BookLimitForStandardSub</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Subscription_Type__c, &apos;VIP&apos;)),
    Number_Of_Hold_Books__c &gt; 5 )</errorConditionFormula>
    <errorMessage>A none-VIP reader can only take up to 5 books.</errorMessage>
</ValidationRule>