force-app/main/default/objects/Reader__c/validationRules/BookLimitForVip.validationRule-meta.xml
<ValidationRule>
    <fullName>BookLimitForVip</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Subscription_Type__c, &apos;VIP&apos;),
  Number_Of_Hold_Books__c &gt; 15)</errorConditionFormula>
    <errorDisplayField>Number_Of_Hold_Books__c</errorDisplayField>
    <errorMessage>VIP reader can take no more than 15 books.</errorMessage>
</ValidationRule>