force-app/main/default/objects/Reader__c/validationRules/NumberOfHoldBooksPositiveNum.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberOfHoldBooksPositiveNum</fullName>
    <active>true</active>
    <errorConditionFormula>Number_Of_Hold_Books__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Number_Of_Hold_Books__c</errorDisplayField>
    <errorMessage>Please select a positive number.</errorMessage>
</ValidationRule>